III-1953 Extra padding and fix for string-based dates

--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -775,3 +775,7 @@ form.booking-period {
 .audience .help-block {
   font-size: small;
 }
+
+.padding-left-12-5{
+    padding-left: 12.5px;
+}
